# sol-cgt

./: .env.example  .gitignore  CHANGELOG.md  README.md  config.example.yaml  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ARCHITECTURE.md  TAX_RULES_AU.md
httpx/: __init__.py
pydantic/: __init__.py
sol_cgt/: __init__.py  cli.py  config.py  pricing.py  types.py  utils.py
sol_cgt/accounting/: engine.py  lots.py  methods.py  policy.py
sol_cgt/ingestion/: fetch.py  normalize.py
sol_cgt/meta/: __init__.py  mints.py
sol_cgt/pricing/: __init__.py  valuation.py
sol_cgt/providers/: birdeye.py  coingecko.py  fx_rates.py  helius.py  jupiter.py  kraken.py  rba_fx.py  solana_rpc.py
sol_cgt/reconciliation/: transfers.py
sol_cgt/reporting/: console.py  formats.py  schema.py  summaries.py  xlsx.py
sol_cgt/tests/: test_birdeye.py  test_compute_fetch.py  test_end_to_end.py  test_engine.py  test_fee_attribution.py  test_fee_cost_base.py  test_fetch_cache.py  test_fetch_pagination.py  test_financial_year.py  test_helius.py  test_jupiter.py  test_kraken.py  test_lot_moves.py  test_mint_meta_cache.py  test_missing_lots.py  test_normalize.py  test_pricing.py  test_reporting_outputs.py  test_settings_validation.py  test_swap_canonicalization.py  test_swap_hints.py  test_transfers.py  test_valuation.py
tenacity/: __init__.py
