[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sol-cgt"
version = "0.1.0"
description = "Solana capital gains tooling"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Auto Dev", email = "auto@example.com" }]
dependencies = [
  "cachetools>=5.3,<6",
  "httpx>=0.27,<0.28",
  "openpyxl>=3.1,<4",
  "orjson>=3.9,<4",
  "pydantic>=2.5,<3",
  "pydantic-settings>=2.1,<3",
  "pyyaml>=6.0,<7",
  "tenacity>=8.2,<9",
  "typer>=0.9,<1",
  "tzdata>=2023.3,<2025; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
  "freezegun>=1.4,<2",
  "pytest>=8.1,<9",
  "pytest-asyncio>=0.23,<1",
]
parquet = ["pyarrow>=14,<16"]
pretty = ["rich>=13.7,<14"]

[project.scripts]
solcgt = "sol_cgt.cli:app"

[tool.setuptools.packages.find]
include = ["sol_cgt*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["sol_cgt/tests"]
